--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="https://pbs.twimg.com/profile_banners/1627868664/1575097219/600x200" alt="Wads Profile Pic"></td>
+      <td>  <img src="" alt="Wads Profile Pic"></td>
       <td><h1>Abdulsamad</h1>
       <p><em>Learning <strong><a href="https://www.reddit.com/r/webdev/">Web Development</a></strong>.</em></p>
       <p>Currently on HTML, next CSS then Javascript.</p></td>
